Fri May 15 21:16:54 1998  Owen Taylor  <otaylor@gtk.org>

	Basic thread-awareness:

	* acconfig.h configure.in: New option --with-threads=[yes/posix/no]

	* gdk/Makefile.am gdk/gdkthreads.c: Added new functions 
	gdk_threads_[init/enter/leave] for applications, plus
	gdk_threads_wake to wake the mainloop thread out of
	the select().

	* gtk/Makefile.am: gtk/testthreads.c: Test program for threads

Fri May 15 12:08:48 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/testgtk.c (list_clear): Account for the fact
	that gtk_list_clear_items is not inclusive. (Clears
	[start, end))

Fri May 15 12:31:27 1998  rodo  <doulik@karlin.mff.cuni.cz>

	* gdk/gdk.c: include gdkkeysyms.h always
	

Fri May 15 09:44:10 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.h (struct _GtkWidgetClass): corrected returntype of
	the visibility_notify_event method and changed method order.

Thu May 14 03:04:43 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtk.defs: added GtkButtonBoxStyle and GtkOrientation definitions
	from Olli Helenius <ollhel@batman.jytol.fi>.

	* gtk/gtktypeutils.c (gtk_type_free): new function to take care about
	freeing types.
	(gtk_type_set_chunk_alloc): new function to allow allocation of new
 	types from a mem_chunk of certain size (n_chunks==0 indicates allocation
	thorugh g_malloc).

	* gtk/gtkobject.c (gtk_object_finalize): free an object through
 	gtk_type_free().

	* gtk/gtkbutton.c (gtk_button_get_type): set chunk preallocation for
	GtkButtons to 16.
	* gtk/gtkmenuitem.c (gtk_menu_item_get_type): likewise (16).
	* gtk/gtklabel.c (gtk_label_get_type): likewise (32).

Wed May 13 00:53:52 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtktypeutils.c gtk/gtksignal.c gdk/gdkdnd.c: A few more 
	  GPOINTER_TO_UINT fixes.

	* gtk/gtksignal.c: Include <string.h> for memset.

Tue May 12 23:10:53 1998  Owen Taylor  <otaylor@gtk.org>
	(Maximilian Bisani <bisani@kawo2.rwth-aachen.de>: gtk-bisani-980320-0)

	* gtk/gtkvruler.c gtk/gtkhruler.c gtk/gtkruler.h: 