@@ -27,6 +27,7 @@
 #include	<stdio.h>
 #include	<unistd.h>
 #include	<errno.h>
+#include	<sys/types.h>	/* needed for sys/stat.h */
 #include	<sys/stat.h>
 #include	"glib.h"
 
